--- a/pykvfinder_env.yml
+++ b/pykvfinder_env.yml
@@ -1,56 +1,178 @@
 name: pykvfinder_env
 channels:
   - conda-forge
-  - omnia
-  - https://repo.anaconda.com/pkgs/main
-  - https://repo.anaconda.com/pkgs/r
+  - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
+  - alsa-lib=1.2.14=h5eee18b_0
+  - attr=2.5.2=h39aace5_0
+  - blosc=1.21.6=hf7d4471_0
   - bzip2=1.0.8=h4bc722e_7
-  - ca-certificates=2025.8.3=hbd8a1cb_0
+  - c-ares=1.34.5=hef5626c_0
+  - ca-certificates=2025.11.4=h06a4308_0
+  - cairo=1.18.4=h44eff21_0
+  - cyrus-sasl=2.1.28=h1110e0f_3
+  - dbus=1.16.2=h5bd4931_0
   - et_xmlfile=2.0.0=pyhd8ed1ab_1
+  - expat=2.7.1=h6a678d5_0
+  - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
+  - font-ttf-inconsolata=2.001=hcb22688_0
+  - font-ttf-source-code-pro=2.030=hd3eb1b0_0
+  - font-ttf-ubuntu=0.83=h8b1ccd4_0
+  - fontconfig=2.15.0=h7e30c49_1
+  - fonts-anaconda=1=h8fa9717_0
+  - fonts-conda-ecosystem=1=hd3eb1b0_0
+  - freetype=2.14.1=ha770c72_0
+  - gettext=0.25.1=h3f43e3d_1
+  - gettext-tools=0.25.1=h3f43e3d_1
+  - glew=2.2.0=hcfb9eae_1
+  - glib=2.86.0=he175458_0
+  - glib-tools=2.86.0=hf516916_0
+  - glm=1.0.1=hdd259ec_0
+  - graphite2=1.3.14=h295c915_1
+  - gst-plugins-base=1.24.11=h651a532_0
+  - gstreamer=1.24.11=hc37bda9_0
+  - harfbuzz=12.1.0=h15599e2_0
+  - hdf4=4.2.15=h2a13503_7
+  - hdf5=1.14.6=nompi_h6e4c0c1_103
+  - icu=75.1=he02047a_0
+  - krb5=1.21.3=h723845a_4
+  - lame=3.100=h7b6447c_0
   - ld_impl_linux-64=2.44=h1423503_1
+  - libaec=1.1.4=h3f801dc_0
+  - libasprintf=0.25.1=h3f43e3d_1
+  - libasprintf-devel=0.25.1=h3f43e3d_1
   - libblas=3.9.0=35_h59b9bed_openblas
+  - libcap=2.77=h3ff7636_0
   - libcblas=3.9.0=35_he106b2a_openblas
+  - libclang-cpp21.1=21.1.6=default_h99862b1_0
+  - libclang13=21.1.6=default_h746c552_0
+  - libcups=2.3.3=hb8b1518_5
+  - libcurl=8.16.0=heebcbe5_0
+  - libdrm=2.4.125=hb03c661_1
+  - libedit=3.1.20230828=h5eee18b_0
+  - libegl=1.7.0=h5eee18b_2
+  - libev=4.33=h7f8727e_1
+  - libevent=2.1.12=hdbd6064_1
   - libexpat=2.7.1=hecca717_0
   - libffi=3.4.6=h2dba641_1
+  - libflac=1.4.3=h59595ed_0
+  - libfreetype=2.14.1=ha770c72_0
+  - libfreetype6=2.14.1=h73754d4_0
   - libgcc=15.1.0=h767d61c_5
   - libgcc-ng=15.1.0=h69a702a_5
+  - libgettextpo=0.25.1=h3f43e3d_1
+  - libgettextpo-devel=0.25.1=h3f43e3d_1
   - libgfortran=15.1.0=h69a702a_5
   - libgfortran5=15.1.0=hcea5267_5
+  - libgl=1.7.0=h5eee18b_2
+  - libglib=2.86.0=h1fed272_0
+  - libglu=9.0.3=h60c0c69_1
+  - libglvnd=1.7.0=h5eee18b_2
+  - libglx=1.7.0=h5eee18b_2
   - libgomp=15.1.0=h767d61c_5
+  - libiconv=1.18=h3b78370_2
+  - libidn2=2.3.8=hf80d704_0
+  - libjpeg-turbo=3.1.2=hfdadbec_0
+  - libkrb5=1.21.3=h520c7b4_4
   - liblapack=3.9.0=35_h7ac8fdf_openblas
+  - libllvm21=21.1.6=hf7376ad_0
   - liblzma=5.8.1=hb9d3cd8_2
+  - liblzma-devel=5.8.1=hb9d3cd8_2
+  - libnetcdf=4.9.3=nompi_h11f7409_103
+  - libnghttp2=1.57.0=h2d74bed_0
   - libnsl=2.0.1=hb9d3cd8_1
+  - libogg=1.3.5=h27cfd23_1
   - libopenblas=0.3.30=pthreads_h94d23a6_2
+  - libopengl=1.7.0=h5eee18b_2
+  - libopus=1.5.2=hd0c01bc_0
+  - libpciaccess=0.18=h5eee18b_0
+  - libpng=1.6.50=h2ed474d_0
+  - libpq=18.1=h5c52fec_1
+  - libsndfile=1.2.2=hc60ed4a_1
+  - libsodium=1.0.20=heac8642_0
   - libsqlite=3.50.4=h0c1763c_0
+  - libssh2=1.11.1=h251f7ec_0
   - libstdcxx=15.1.0=h8f9b012_5
+  - libstdcxx-ng=15.1.0=h4852527_5
+  - libsystemd0=258.2=h6569c3e_1
+  - libunistring=1.3=hb25bd0a_0
   - libuuid=2.41.1=he9a06e4_0
+  - libvorbis=1.3.7=h7b6447c_0
+  - libxcb=1.17.0=h9b100fa_0
   - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.13.0=hca5e8e5_0
+  - libxml2=2.15.1=h26afc86_0
+  - libxml2-16=2.15.1=ha9997c6_0
+  - libzip=1.11.2=h6991a6a_0
   - libzlib=1.3.1=hb9d3cd8_2
+  - lmdb=0.9.31=hb25bd0a_0
+  - lz4-c=1.9.4=h6a678d5_1
+  - mpg123=1.32.9=hc50e24c_0
   - ncurses=6.5=h2d0b736_3
+  - nspr=4.37=h8459abe_0
+  - nss=3.117=h3135ca0_0
   - numpy=2.2.6=py310hefbff90_0
+  - openldap=2.6.10=he9288cc_1
   - openpyxl=3.1.5=py310h05b0c27_2
-  - openssl=3.5.2=h26f9b46_0
+  - openssl=3.6.0=h26f9b46_0
+  - packaging=25.0=py310h06a4308_1
   - pandas=2.3.2=py310h0158d43_0
+  - pcre2=10.46=hf426167_0
   - pip=25.2=pyh8b19718_0
+  - pixman=0.46.4=h7934f7d_0
+  - pmw=2.1.1=py310hff52083_0
+  - pthread-stubs=0.3=h0ce48e5_1
+  - pulseaudio-client=17.0=h9a8bead_2
+  - pymol-open-source=3.1.0=py310h726e112_5
+  - pyqt=5.15.11=py310h144e999_0
+  - pyqt5-sip=12.17.0=py310hee96239_0
   - python=3.10.18=hd6af730_0_cpython
   - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-tzdata=2025.2=pyhd8ed1ab_0
   - python_abi=3.10=8_cp310
   - pytz=2025.2=pyhd8ed1ab_0
+  - qt-main=5.15.15=h3c3fd16_6
   - readline=8.2=h8c095d6_2
   - setuptools=80.9.0=pyhff2d567_0
+  - sip=6.12.0=py310h7934f7d_0
   - six=1.17.0=pyhe01879c_1
+  - sqlite=3.50.2=hb25bd0a_1
   - tk=8.6.13=noxft_hd72426e_102
+  - tomli=2.2.1=py310h06a4308_0
   - tzdata=2025b=h78e105d_0
   - wheel=0.45.1=pyhd8ed1ab_1
+  - xcb-util=0.4.1=h5eee18b_2
+  - xcb-util-image=0.4.0=h5eee18b_2
+  - xcb-util-keysyms=0.4.1=h5eee18b_0
+  - xcb-util-renderutil=0.3.10=h5eee18b_0
+  - xcb-util-wm=0.4.2=h5eee18b_0
+  - xkeyboard-config=2.44=h5eee18b_0
+  - xorg-libice=1.1.2=h9b100fa_0
+  - xorg-libsm=1.2.6=he73a12e_0
+  - xorg-libx11=1.8.12=h9b100fa_1
+  - xorg-libxau=1.0.12=h9b100fa_0
+  - xorg-libxcomposite=0.4.6=h9b100fa_2
+  - xorg-libxdamage=1.1.6=h9b100fa_0
+  - xorg-libxdmcp=1.1.5=h9b100fa_0
+  - xorg-libxext=1.3.6=h9b100fa_0
+  - xorg-libxfixes=6.0.2=hb03c661_0
+  - xorg-libxrender=0.9.12=h9b100fa_0
+  - xorg-libxshmfence=1.3.3=h9b100fa_0
+  - xorg-libxxf86vm=1.1.6=h9b100fa_0
+  - xorg-xorgproto=2024.1=h5eee18b_1
+  - xz=5.8.1=hbcc6ac9_2
+  - xz-gpl-tools=5.8.1=hbcc6ac9_2
+  - xz-tools=5.8.1=hb9d3cd8_2
+  - zlib=1.3.1=hb9d3cd8_2
+  - zstd=1.5.7=h11fc155_0
   - pip:
+      - matplotlib==3.10.7
       - narwhals==2.4.0
       - pillow==11.3.0
       - plotly==6.3.0
       - pykvfinder==0.8.2
       - pyparsing==3.2.3
       - tomlkit==0.13.3
-prefix: /home/stcg/miniconda3/envs/pykvfinder_env
+prefix: /home/david/miniconda3/envs/pykvfinder_env
