--- a/pykvfinder_env.yml
+++ b/pykvfinder_env.yml
@@ -1,4 +1,3 @@
-name: pykvfinder_env
 channels:
   - conda-forge
   - defaults
@@ -175,4 +174,4 @@ dependencies:
       - pykvfinder==0.8.2
       - pyparsing==3.2.3
       - tomlkit==0.13.3
-prefix: /home/david/miniconda3/envs/pykvfinder_env
+      - mdtraj==1.10.3 
