--- a/clustering_env.yml
+++ b/clustering_env.yml
@@ -1,85 +1,177 @@
 name: clustering_env
 channels:
   - conda-forge
-  - omnia
-  - https://repo.anaconda.com/pkgs/main
-  - https://repo.anaconda.com/pkgs/r
+  - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
+  - alsa-lib=1.2.14=hb9d3cd8_0
   - blosc=1.21.6=he440d0b_1
+  - brotli=1.2.0=hed03a55_1
+  - brotli-bin=1.2.0=hb03c661_1
   - bzip2=1.0.8=hda65f42_8
-  - c-ares=1.34.5=hb9d3cd8_0
+  - c-ares=1.34.6=hb03c661_0
   - c-blosc2=2.15.2=h3122c55_1
-  - ca-certificates=2025.8.3=hbd8a1cb_0
-  - cuda-nvrtc=12.9.86=h5888daf_0
-  - cuda-version=12.9=h4f385c5_3
+  - ca-certificates=2025.12.2=h06a4308_0
+  - cairo=1.18.4=h3394656_0
+  - contourpy=1.3.2=py310h3788b33_0
+  - cuda-nvrtc=13.1.80=hecca717_0
+  - cuda-version=13.1=h2ff5cdb_3
+  - cycler=0.12.1=pyhcf101f3_2
+  - cyrus-sasl=2.1.28=hd9c7081_0
+  - dbus=1.16.2=h24cb091_1
+  - double-conversion=3.3.1=h5888daf_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h7e30c49_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=hc364b38_1
+  - fonttools=4.61.0=py310h3406613_0
+  - freetype=2.14.1=ha770c72_0
+  - graphite2=1.3.14=hecca717_2
+  - harfbuzz=12.2.0=h15599e2_0
   - hdf5=1.14.4=nompi_h2d575fe_105
+  - icu=75.1=he02047a_0
   - joblib=1.5.2=pyhd8ed1ab_0
   - keyutils=1.6.3=hb9d3cd8_0
+  - kiwisolver=1.4.9=py310haaf941d_2
   - krb5=1.21.3=h659f571_0
-  - ld_impl_linux-64=2.44=h1423503_1
+  - lcms2=2.17=h717163a_0
+  - ld_impl_linux-64=2.45=default_hbd61a6d_104
+  - lerc=4.0.0=h0aef613_1
   - libaec=1.1.4=h3f801dc_0
-  - libblas=3.9.0=35_h4a7cf45_openblas
-  - libcblas=3.9.0=35_h0358290_openblas
-  - libcufft=11.4.1.4=h5888daf_0
-  - libcurl=8.14.1=h332b0f4_0
+  - libblas=3.11.0=4_h4a7cf45_openblas
+  - libbrotlicommon=1.2.0=hb03c661_1
+  - libbrotlidec=1.2.0=hb03c661_1
+  - libbrotlienc=1.2.0=hb03c661_1
+  - libcblas=3.11.0=4_h0358290_openblas
+  - libclang-cpp21.1=21.1.7=default_h99862b1_1
+  - libclang13=21.1.7=default_h746c552_1
+  - libcufft=12.1.0.31=hecca717_0
+  - libcups=2.3.3=hb8b1518_5
+  - libcurl=8.17.0=h4e3cde8_0
+  - libdeflate=1.25=h17f619e_0
+  - libdrm=2.4.125=hb03c661_1
   - libedit=3.1.20250104=pl5321h7949ede_0
+  - libegl=1.7.0=ha4b6fd6_2
   - libev=4.33=hd590300_2
-  - libexpat=2.7.1=hecca717_0
-  - libffi=3.4.6=h2dba641_1
-  - libgcc=15.1.0=h767d61c_5
-  - libgcc-ng=15.1.0=h69a702a_5
-  - libgfortran=15.1.0=h69a702a_5
-  - libgfortran5=15.1.0=hcea5267_5
-  - libgomp=15.1.0=h767d61c_5
-  - liblapack=3.9.0=35_h47877c9_openblas
+  - libexpat=2.7.3=hecca717_0
+  - libffi=3.5.2=h9ec8514_0
+  - libfreetype=2.14.1=ha770c72_0
+  - libfreetype6=2.14.1=h73754d4_0
+  - libgcc=15.2.0=he0feb66_16
+  - libgcc-ng=15.2.0=h69a702a_16
+  - libgfortran=15.2.0=h69a702a_16
+  - libgfortran5=15.2.0=h68bc16d_16
+  - libgl=1.7.0=ha4b6fd6_2
+  - libglib=2.86.2=h32235b2_0
+  - libglvnd=1.7.0=ha4b6fd6_2
+  - libglx=1.7.0=ha4b6fd6_2
+  - libgomp=15.2.0=he0feb66_16
+  - libiconv=1.18=h3b78370_2
+  - libjpeg-turbo=3.1.2=hb03c661_0
+  - liblapack=3.11.0=4_h47877c9_openblas
+  - libllvm21=21.1.7=hf7376ad_0
   - liblzma=5.8.1=hb9d3cd8_2
   - libnghttp2=1.67.0=had1ee68_0
   - libnsl=2.0.1=hb9d3cd8_1
-  - libopenblas=0.3.30=pthreads_h94d23a6_2
-  - libsqlite=3.50.4=h0c1763c_0
+  - libntlm=1.8=hb9d3cd8_0
+  - libopenblas=0.3.30=pthreads_h94d23a6_4
+  - libopengl=1.7.0=ha4b6fd6_2
+  - libpciaccess=0.18=hb9d3cd8_0
+  - libpng=1.6.53=h421ea60_0
+  - libpq=18.1=h5c52fec_2
+  - libsqlite=3.51.1=h0c1763c_0
   - libssh2=1.11.1=hcf80075_0
-  - libstdcxx=15.1.0=h8f9b012_5
-  - libstdcxx-ng=15.1.0=h4852527_5
-  - libuuid=2.41.1=he9a06e4_0
+  - libstdcxx=15.2.0=h934c35e_16
+  - libstdcxx-ng=15.2.0=hdf11a46_16
+  - libtiff=4.7.1=h9d88235_1
+  - libuuid=2.41.2=h5347b49_1
+  - libvulkan-loader=1.4.328.1=h5279c79_0
+  - libwebp-base=1.6.0=hd42ef1d_0
+  - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.13.1=hca5e8e5_0
+  - libxml2=2.15.1=h26afc86_0
+  - libxml2-16=2.15.1=ha9997c6_0
+  - libxslt=1.1.43=h711ed8c_1
   - libzlib=1.3.1=hb9d3cd8_2
   - lz4-c=1.10.0=h5888daf_1
+  - matplotlib=3.10.8=py310hff52083_0
+  - matplotlib-base=3.10.8=py310hfde16b3_0
   - mdtraj=1.10.3=py310h4cdbd58_0
+  - munkres=1.1.4=pyhd8ed1ab_1
   - ncurses=6.5=h2d0b736_3
   - nomkl=1.0=h5ca1d4c_0
-  - numexpr=2.10.2=py310hdb6e06b_100
+  - numexpr=2.14.1=py310h34a7263_101
   - numpy=2.2.6=py310hefbff90_0
   - ocl-icd=2.3.3=hb9d3cd8_0
   - ocl-icd-system=1.0.0=1
   - opencl-headers=2025.06.13=h5888daf_0
-  - openmm=8.3.1=py310h2992144_0
-  - openssl=3.5.2=h26f9b46_0
+  - openjpeg=2.5.4=h55fea9a_0
+  - openldap=2.6.10=he970967_0
+  - openmm=8.4.0=py310h39b4bc9_2
+  - openssl=3.6.0=h26f9b46_0
   - packaging=25.0=pyh29332c3_1
-  - pandas=2.3.2=py310h0158d43_0
-  - pip=25.2=pyh8b19718_0
+  - pandas=2.3.3=py310h0158d43_2
+  - pcre2=10.46=h1321c63_0
+  - pillow=12.0.0=py310h049bd52_1
+  - pip=25.3=pyh8b19718_0
+  - pixman=0.46.4=h54a6638_1
+  - pthread-stubs=0.4=hb9d3cd8_1002
   - py-cpuinfo=9.0.0=pyhd8ed1ab_1
-  - pyparsing=3.2.3=pyhe01879c_2
+  - pyparsing=3.2.5=pyhcf101f3_0
+  - pyside6=6.9.3=py310h2007e60_1
   - pytables=3.10.1=py310h431dcdc_4
-  - python=3.10.18=hd6af730_0_cpython
+  - python=3.10.19=h3c07f61_2_cpython
   - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-tzdata=2025.2=pyhd8ed1ab_0
   - python_abi=3.10=8_cp310
   - pytz=2025.2=pyhd8ed1ab_0
+  - qhull=2020.2=h434a139_5
+  - qt6-main=6.9.3=h5c1c036_1
   - readline=8.2=h8c095d6_2
+  - rocm-core=7.0.2=h54a6638_0
   - scikit-learn=1.7.2=py310h228f341_0
   - scipy=1.15.2=py310h1d65ade_0
+  - seaborn=0.13.2=py310h06a4308_3
   - setuptools=80.9.0=pyhff2d567_0
   - six=1.17.0=pyhe01879c_1
-  - snappy=1.2.2=h03e3b7b_0
+  - snappy=1.2.2=h03e3b7b_1
   - threadpoolctl=3.6.0=pyhecae5ae_0
-  - tk=8.6.13=noxft_hd72426e_102
+  - tk=8.6.13=noxft_ha0e22de_103
+  - tornado=6.5.2=py310h7c4b9e2_2
   - typing-extensions=4.15.0=h396c80c_0
   - typing_extensions=4.15.0=pyhcf101f3_0
   - tzdata=2025b=h78e105d_0
+  - unicodedata2=17.0.0=py310h7c4b9e2_1
+  - wayland=1.24.0=hd6090a7_1
   - wheel=0.45.1=pyhd8ed1ab_1
+  - xcb-util=0.4.1=h4f16b4b_2
+  - xcb-util-cursor=0.1.6=hb03c661_0
+  - xcb-util-image=0.4.0=hb711507_2
+  - xcb-util-keysyms=0.4.1=hb711507_0
+  - xcb-util-renderutil=0.3.10=hb711507_0
+  - xcb-util-wm=0.4.2=hb711507_0
+  - xkeyboard-config=2.46=hb03c661_0
+  - xorg-libice=1.1.2=hb9d3cd8_0
+  - xorg-libsm=1.2.6=he73a12e_0
+  - xorg-libx11=1.8.12=h4f16b4b_0
+  - xorg-libxau=1.0.12=hb03c661_1
+  - xorg-libxcomposite=0.4.6=hb9d3cd8_2
+  - xorg-libxcursor=1.2.3=hb9d3cd8_0
+  - xorg-libxdamage=1.1.6=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb03c661_1
+  - xorg-libxext=1.3.6=hb9d3cd8_0
+  - xorg-libxfixes=6.0.2=hb03c661_0
+  - xorg-libxi=1.8.2=hb9d3cd8_0
+  - xorg-libxrandr=1.5.4=hb9d3cd8_0
+  - xorg-libxrender=0.9.12=hb9d3cd8_0
+  - xorg-libxtst=1.2.5=hb9d3cd8_3
+  - xorg-libxxf86vm=1.1.6=hb9d3cd8_0
   - zlib=1.3.1=hb9d3cd8_2
-  - zlib-ng=2.2.5=hde8ca8f_0
-  - zstd=1.5.7=hb8e6e7a_2
+  - zlib-ng=2.2.5=hde8ca8f_1
+  - zstd=1.5.7=hb78ec9c_6
 prefix: /home/stcg/miniconda3/envs/clustering_env
