--- a/pykvfinder_env.yml
+++ b/pykvfinder_env.yml
@@ -1,4 +1,4 @@
-name: clustering_env
+name: pykvfinder_env
 channels:
   - conda-forge
   - defaults
@@ -176,3 +176,4 @@ dependencies:
       - pyparsing==3.2.3
       - tomlkit==0.13.3
       - mdtraj==1.10.3 
+prefix: /home/stcg/miniconda3/envs/pykvfinder_env
